tests/valid/test_record_09.wyal
type Buffer is ({int[] data, int wp} self)

assert:
  forall(Buffer x, Buffer y, int[] ys):
     if:
         x == y{data:=ys}
         y.wp >= 0
     then:
         x.wp >= 0

