tests/invalid/test_037.wyal
type Buffer is ({int[] data, int wp} this)

assert:
  forall(Buffer x, Buffer y, int[] ys):
     if:
         x{wp:=0} == y{data:=ys}
     then:
         x.wp == y.wp

